--- a/Assets/Plugins/Android/mainTemplate.gradle
+++ b/Assets/Plugins/Android/mainTemplate.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-basement:18.1.0' // Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:25
     implementation 'com.google.android.ump:user-messaging-platform:2.1.0' // Assets/GoogleMobileAds/Editor/GoogleUmpDependencies.xml:7
     implementation 'com.ironsource.sdk:mediationsdk:8.1.0' // Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:9
+    implementation 'com.ironsource:adqualitysdk:7.20.1' // Assets/LevelPlay/Editor/IronSourceAdQualityDependencies.xml:8
     implementation 'com.yandex.android:mobmetricalib:5.2.0' // Assets/AppMetrica/Editor/AppMetricaDependencies.xml:4
 // Android Resolver Dependencies End
 **DEPS**}
