--- a/Assets/Plugins/Android/settingsTemplate.gradle
+++ b/Assets/Plugins/Android/settingsTemplate.gradle
@@ -22,7 +22,7 @@ dependencyResolutionManagement {
             url "https://maven.google.com/" // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7, Assets/GoogleMobileAds/Editor/GoogleUmpDependencies.xml:7, Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:17, Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:25
         }
         maven {
-            url "https://android-sdk.is.com/" // Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:9
+            url "https://android-sdk.is.com/" // Assets/LevelPlay/Editor/IronSourceAdQualityDependencies.xml:8, Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:9
         }
         mavenLocal()
 // Android Resolver Repos End
