--- a/Assets/Plugins/Android/settingsTemplate.gradle
+++ b/Assets/Plugins/Android/settingsTemplate.gradle
@@ -19,10 +19,10 @@ dependencyResolutionManagement {
 // Android Resolver Repos Start
         def unityProjectPath = $/file:///**DIR_UNITYPROJECT**/$.replace("\\", "/")
         maven {
-            url "https://maven.google.com/" // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7, Assets/GoogleMobileAds/Editor/GoogleUmpDependencies.xml:7, Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:17, Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:25
+            url "https://maven.google.com/" // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7, Assets/GoogleMobileAds/Editor/GoogleUmpDependencies.xml:7, Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:17, Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:25, Assets/LevelPlay/Editor/ISAdMobAdapterDependencies.xml:8
         }
         maven {
-            url "https://android-sdk.is.com/" // Assets/LevelPlay/Editor/IronSourceAdQualityDependencies.xml:8, Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:9
+            url "https://android-sdk.is.com/" // Assets/LevelPlay/Editor/IronSourceAdQualityDependencies.xml:8, Assets/LevelPlay/Editor/IronSourceSDKDependencies.xml:9, Assets/LevelPlay/Editor/ISAdMobAdapterDependencies.xml:16
         }
         mavenLocal()
 // Android Resolver Repos End
